# rmenu

./: .gitignore  ACTIVE_QUEUE.md  AUTONOMOUS_EXECUTION.md  CHANGELOG.md  CORE_CLOSURE_CHECKLIST.md  CORE_FREEZE_V1.md  CTX_ACTIONS_SPEC_V1.md  Cargo.toml  DECISIONS.md  ERROR_ISOLATION_POLICY.md  IMPLEMENTATION_PLAN.md  INSTALL.md  LICENSE  MANIFEST_SPEC_V1.md  MODULES_API_SPEC_V1.md  MODULES_ARCHITECTURE.md  MODULES_AUTHORING_GUIDE.md  MODULES_CAPABILITIES_MATRIX.md  MODULES_OPERATIONS_GUIDE.md  MODULES_QUICKSTART.md  POST_FREEZE_ROADMAP.md  POWERSHELL_EXAMPLES.md  PROVIDER_EXECUTION_POLICY.md  README.md  RELEASE_CHECKLIST.md  RMODS_IDEAS.md  RMOD_SPEC_V1.md  STATE.md  build.bat  build.rs  config_example.ini  install.bat  resource.rc
.github/workflows/: release.yml
artifacts/audits/: audit-20260422-093534.txt  audit-20260422-093656.txt  audit-20260422-093812.txt  audit-20260422-094201.txt
docs/: companion-and-rmods-workflow.md  rmods-registry.md  update-workflow.md
docs/ahk-migration/: COMMAND_INVENTORY.md  DAEMON_BOUNDARY.md  DECISION.md  HANDOFF.md  MANUAL_VALIDATION.md  SHORTCUTS.md
docs/audits/: codebase-report-2026-04-22.md
docs/historico/: README.md
docs/historico/modulesREPORT/: CTX_ACTIONS_SPEC_V1.md  IMPLEMENTATION_SNAPSHOT_2026-04-22.md  IMPLEMENTATION_SNAPSHOT_2026-04-23.md  MODULES_API_SPEC_V1.md  MODULES_OPERATIONS_GUIDE.md  MODULES_RELEASE_CHECKLIST.md  PRIMITIVE_TEMPLATE.md  README.md  item_trailing_accessories_primitive.md
docs/historico/modulesREPORTE/: reporte_base.md  ui_extension_primitive.md
docs/historico/private-docs/: DECISIONS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SNAPSHOT_2026-04-22.md  IMPLEMENTATION_SNAPSHOT_2026-04-23.md  MODULES_CHANGELOG.md  MODULES_IMPLEMENTATION_PLAN.md  MODULES_README.md  codebase-report.md  core_finalization_report.md  extensions_implementation_plan.md  modulesarchitecture_reporte.md
docs/release/: BINARY_SIGNING.md
installer/: build-installer.ps1  rmenu.iss
modules/: calculator.rmod  local-scripts.rmod  shortcuts.rmod
modules/examples/: shortcuts.example.rmod
modules/timer/: README.md  config.json  module.js  module.toml
modulesREPORT/: CHANGELOG.md  DECISIONS.md  ERROR_ISOLATION_POLICY.md  MANIFEST_SPEC_V1.md  MODULES_AUTHORING_GUIDE.md  MODULES_CAPABILITIES_MATRIX.md  MODULES_EXECUTION_CHECKLIST.md  MODULES_IMPLEMENTATION_PLAN.md  PROVIDER_EXECUTION_POLICY.md  RMOD_SPEC_V1.md
modulesREPORTE/: modules_architecture.md
scripts/: audit.ps1  release-local.ps1
src/: app_state.rs  daemon_main.rs  fuzzy.rs  launcher.rs  main.rs  module_host_main.rs  ranking.rs  resident_helpers.rs  rmods_registry.rs  rsnip_companion.rs  rtasks_companion.rs  settings.rs  ui_win32.rs  update_check.rs  updater_main.rs
src/modules/: actions.rs  context.rs  hooks.rs  host_client.rs  ipc.rs  loader.rs  manifest.rs  mod.rs  rmod.rs  state.rs  types.rs
src/sources/: mod.rs
(+20 files in other folders)
