[package]
name = "rmenu"
version = "0.3.2"
edition = "2021"
description = "Lightweight Windows launcher and modular command surface"
authors = ["SynrgStudio"]
license = "MIT"

# Incluir archivos adicionales en el paquete
include = [
    "**/*.rs",
    "Cargo.toml",
    "config_example.ini",
    "README.md",
    "INSTALL.md",
    "CHANGELOG.md",
    "RELEASE_CHECKLIST.md",
    "POST_FREEZE_ROADMAP.md",
    "LICENSE",
    "CORE_FREEZE_V1.md",
    "DECISIONS.md",
    "ERROR_ISOLATION_POLICY.md",
    "PROVIDER_EXECUTION_POLICY.md",
    "MODULES_*.md",
    "*_SPEC_V1.md",
    "docs/release/*.md",
    "modules/examples/*.rmod",
    "scripts/*.ps1",
]

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Com_Urlmon",
    "Win32_Security",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
] }
dirs = "5.0.1"
atty = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[build-dependencies]
embed-resource = "2.2.0"

[profile.release]
strip = true        # Automatically strip symbols from the binary
opt-level = 3       # Maximum optimization
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce parallel code generation units for better optimization

[[bin]]
name = "rmenu"
path = "src/main.rs"

[[bin]]
name = "rmenu-module-host"
path = "src/module_host_main.rs"

[[bin]]
name = "rmenu-daemon"
path = "src/daemon_main.rs"

[[bin]]
name = "rmenu-updater"
path = "src/updater_main.rs"
